work on main page

--- a/layouts/gallery/single.html
+++ b/layouts/gallery/single.html
@@ -1,7 +1,7 @@
 {{ define "header" }}{{ partial "page-header.html" . }}{{ end }}
 {{ define "main" }}
   <head>
-    <link rel="stylesheet" href="{{$.Site.BaseURL}}/css/gallery.css">
+    <link rel="stylesheet" href="{{$.Site.BaseURL}}/css/main.css">
   </head>
   <div class="flex-l mt2 mw8 center">
     <article class="center cf pv5 ph3 ph4-ns mw7">
