--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,7 +2,7 @@
   <head>
     <link rel="stylesheet" href="{{$.Site.BaseURL}}css/main.css">
   </head>
-  <article class="cf ph3 ph5-l pv3 pv4-l f4 tc-l center measure-wide lh-copy {{ $.Param "text_color" | default "mid-gray" }}">
+  <article class="cf ph3 ph5-l pv0 pv0-l f4 tc-l center measure-wide lh-copy {{ $.Param "text_color" | default "mid-gray" }}">
       {{ .Content }}
     </article>
     {{/* Define a section to pull recent posts from. For Hugo 0.20 this will default to the section with the most number of pages. */}}
@@ -16,10 +16,11 @@
     {{ $section := where $.Site.RegularPages "Section" "in" $section_name }}
     {{ $section_count := len $section }}
     {{ if ge $section_count 1 }}
-      <div class="pa3 pa4-ns w-100 w-70-ns center">
+    <div style="background-color: #e1dbdb;">
+      <div class="pa0 pa0-ns w-100 w-70-ns center">
         {{/* Use $section_name to get the section title. Use "with" to only show it if it exists */}}
         {{ with $.Site.GetPage "section" $section_name }}
-            <h1 class="flex-none"></h1>
+            <!--h1 class="flex-none"></h1-->
           {{ end }}
 
         {{ $n_posts := $.Param "recent_posts_number" | default 3 }}
@@ -27,7 +28,7 @@
         <section class="w-100 mw8">
           {{/* Range through the first $n_posts items of the section */}}
           {{ range $index, $element := (first $n_posts $section) }}
-            <div class="relative w-100 mb4">
+            <div class="relative w-100 mb0">
               {{ .Render "summary-with-image" }}
             </div>
           {{ end }}
@@ -38,7 +39,7 @@
           <h1 class="f3">{{ i18n "more" }}</h1>
           {{/* Now, range through the next four after the initial $n_posts items. Nest the requirements, "after" then "first" on the outside */}}
           {{ range (first 4 (after $n_posts $section))  }}
-            <h2 class="f5 fw4 mb4 dib {{ cond (eq $.Site.Language.LanguageDirection "rtl") "ml3" "mr3" }}">
+            <h2 class="f5 fw4 mb0 dib {{ cond (eq $.Site.Language.LanguageDirection "rtl") "ml3" "mr3" }}">
               <a href="{{ .RelPermalink }}" class="link black dim">
                 {{ .Title }}
               </a>
@@ -53,6 +54,7 @@
         {{ end }}
 
         </div>
+    </div>
     {{ end }}
   {{ end }}
 {{end}}
