--- a/layouts/partials/site-header.html
+++ b/layouts/partials/site-header.html
@@ -1,16 +1,16 @@
 {{ $featured_image := partial "func/GetFeaturedImage.html" . }}
 {{ if $featured_image }}
   {{/* Trimming the slash and adding absURL make sure the image works no matter where our site lives */}}
-  <div class="{{ .Site.Params.cover_dimming_class | default "#e1dbdb" }}">
+  <div class="{{ .Site.Params.cover_dimming_class | default "#e1dbdb 50%" }}">
     {{ partial "site-navigation.html" .}}
   <header class="tc-l pv1 pv2-l ph3 ph4-ns" style="background: linear-gradient(to bottom, #e1dbdb 50%, #633331 50%);">
       {{ if $featured_image }}
-      <h1 class="f2 f-subheadline-l fw2 black-90 mb0 lh-title mt0">
+      <h1 class="f2 f-subheadline- fw2 black-90 mb0 lh-title mt0">
         {{ .Title | default .Site.Title }}
       </h1>
-        <div style="width: 500px; height: 500px; margin: 0 auto; border-radius: 50%; overflow: hidden;">
-          <img src="{{ $featured_image }}" alt="Featured Image" style="width: 100%; height: 100%; object-fit: cover;">
-        </div>
+      <div style="width: 50%; max-width: 500px; height: auto; aspect-ratio: 1; margin: 0 auto; border-radius: 50%; overflow: hidden;">
+        <img src="{{ $featured_image }}" alt="Featured Image" style="width: 100%; height: 100%; object-fit: cover;">
+      </div>      
       {{ end }}
       {{ with .Params.description }}
         <h2 class="fw1 f5 f3-l white-80 measure-wide-l center lh-copy mt3 mb4">
