--- a/layouts/_default/summary-with-image.html
+++ b/layouts/_default/summary-with-image.html
@@ -3,55 +3,21 @@
 <article class="">
   <div class="db pv0 ph3 ph0-l no-underline dark-gray">
     <div class="flex flex-column flex-row-ns">
-      {{ if eq (mod .Params.index 2) 0 }}
-        <!-- Even Index: Image on the Right -->
-        <div class="blah w-100 w-60-ns pr3-ns">
-          <h1 class="f3 fw1 athelas mt0 lh-title">
-            <!--a href="{{.RelPermalink}}" class="color-inherit dim link">
-              {{ .Title }}
-            </a-->
-            {{.Title}}
-          </h1>
+        <div class="blah w-100 w-50-ns pr3-ns">
+          <h2>
+            {{ .Title }}
+          </h2>
           <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
             {{ .Summary }}
           </div>
-          <!--a href="{{.RelPermalink}}" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">
-            {{ $.Param "read_more_copy" | default (i18n "readMore") }}
-          </a-->
         </div>
 
         {{ if $featured_image }}
-          <div class="w-100 w-40-ns mb0 mb0-ns pl3-ns">
-            <!--a href="{{ .RelPermalink }}" class="db grow">
-              <img src="{{ $featured_image }}" class="quad-image" alt="image from {{ .Title }}">
-            </a-->
-            <img src="{{ $featured_image }}" class="quad-image" alt="image from {{ .Title }}">
+          <div class="w-100 w-50-ns mb0 mb0-ns pl3-ns">
+            <img src="{{ $featured_image }}" alt="image from {{ .Title }}" style="width: 100%; height: 100%; object-fit: cover;">
           </div>
         {{ end }}
-      {{ else }}
-        <!-- Odd Index: Image on the Left -->
-        {{ if $featured_image }}
-          <div class="w-100 w-40-ns mb0 mb0-ns pr3-ns">
-            <a href="{{ .RelPermalink }}" class="db grow">
-              <img src="{{ $featured_image }}" class="quad-image" alt="image from {{ .Title }}">
-            </a>
-          </div>
-        {{ end }}
-
-        <div class="blah w-100 w-60-ns">
-          <h1 class="f3 fw1 athelas mt0 lh-title">
-            <a href="{{.RelPermalink}}" class="color-inherit dim link">
-              {{ .Title }}
-            </a>
-          </h1>
-          <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
-            {{ .Summary }}
-          </div>
-          <!--a href="{{.RelPermalink}}" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">
-            {{ $.Param "read_more_copy" | default (i18n "readMore") }}
-          </a-->
-        </div>
-      {{ end }}
     </div>
   </div>
 </article>
+
