--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,58 +2,47 @@
   <head>
     <link rel="stylesheet" href="{{$.Site.BaseURL}}css/main.css">
   </head>
-  <article class="cf ph3 ph5-l pv0 pv0-l f4 tc-l center measure-wide lh-copy {{ $.Param "text_color" | default "mid-gray" }}">
+  <!-- <article class="cf ph0 ph0-l pv0 pv0-l f4 tc-l center measure-wide lh-copy {{ $.Param "text_color" | default "mid-gray" }}">
       {{ .Content }}
-    </article>
-    {{/* Define a section to pull recent posts from. For Hugo 0.20 this will default to the section with the most number of pages. */}}
+    </article> -->
     {{ $mainSections := .Site.Params.mainSections | default (slice "post") }}
-    
-    {{/* Check to see if the section is defined for ranging through it */}}
     {{range ($mainSections)}}
-    {{/* Derive the section name  */}}
     {{ $section_name := . }}
-    {{/* Create a variable with that section to use in multiple places. */}}
     {{ $section := where $.Site.RegularPages "Section" "in" $section_name }}
     {{ $section_count := len $section }}
     {{ if ge $section_count 1 }}
-    <div style="background-color: #e1dbdb;">
+    <div style="background-color: #f5ebe1">
       <div class="pa0 pa0-ns w-100 w-70-ns center">
-        {{/* Use $section_name to get the section title. Use "with" to only show it if it exists */}}
         {{ with $.Site.GetPage "section" $section_name }}
             <!--h1 class="flex-none"></h1-->
           {{ end }}
 
-        {{ $n_posts := $.Param "recent_posts_number" | default 3 }}
-
         <section class="w-100 mw8">
-          {{/* Range through the first $n_posts items of the section */}}
-          {{ range $index, $element := (first $n_posts $section) }}
+          {{ range $index, $element := (first 1 $section) }}
+            <div class="relative w-100 mb0">
+              {{ .Render "summary-with-image" }}
+            </div>
+          {{ end }}
+
+        <!-- <div class="relative w-100 mb0" style="height: 60vh;">
+          <img src="images/forest.jpg" style="object-fit: cover; height: 100%; width: 100%; filter: grayscale(40%) opacity(60%)">
+        </div> -->
+        <div class="relative w-100 mb0" style="background-image: url('images/forest.jpg'); background-size: cover; background-position: center; height: 500px;">
+          <!-- Flexbox container for the 3 images -->
+          <div class="flex-container" style="display: flex; justify-content: space-between; align-items: center; height: 100%;">
+            <img src="images/art3.jpg" style="width: 32%; height: auto; object-fit: cover;">
+            <img src="images/art2.jpg" style="width: 32%; height: auto; object-fit: cover;">
+            <img src="images/art1.jpg" style="width: 32%; height: auto; object-fit: cover;">
+          </div>
+        </div>
+
+        {{ range (first 1 (after 1 $section)) }}
             <div class="relative w-100 mb0">
               {{ .Render "summary-with-image" }}
             </div>
           {{ end }}
         </section>
-
-        {{ if ge $section_count (add $n_posts 1) }}
-        <section class="w-100">
-          <h1 class="f3">{{ i18n "more" }}</h1>
-          {{/* Now, range through the next four after the initial $n_posts items. Nest the requirements, "after" then "first" on the outside */}}
-          {{ range (first 4 (after $n_posts $section))  }}
-            <h2 class="f5 fw4 mb0 dib {{ cond (eq $.Site.Language.LanguageDirection "rtl") "ml3" "mr3" }}">
-              <a href="{{ .RelPermalink }}" class="link black dim">
-                {{ .Title }}
-              </a>
-            </h2>
-          {{ end }}
-
-          {{/* As above, Use $section_name to get the section title, and URL. Use "with" to only show it if it exists */}}
-          {{ with $.Site.GetPage "section" $section_name }}
-            <a href="{{ .RelPermalink }}" class="link db f6 pa2 br3 bg-mid-gray white dim w4 tc">{{ i18n "allTitle" . }}</a>
-          {{ end }}
-          </section>
-        {{ end }}
-
-        </div>
+      </div>
     </div>
     {{ end }}
   {{ end }}
