--- a/layouts/partials/site-navigation.html
+++ b/layouts/partials/site-navigation.html
@@ -1,4 +1,4 @@
-<nav class="pv3 ph3 ph4-ns" role="navigation" style="background-color: #e1dbdb;">
+<nav class="pv3 ph3 ph4-ns" role="navigation" style="background-color: #f5ebe1;">
   <div class="flex-l justify-between items-center center">
     <a href="{{ .Site.Home.RelPermalink }}" class="f3 fw2 hover-black no-underline black-90 dib">
       {{ with .Site.Params.site_logo }}
