--- a/layouts/index.html
+++ b/layouts/index.html
@@ -30,9 +30,9 @@
         <div class="relative w-100 mb0" style="background-image: url('images/forest.jpg'); background-size: cover; background-position: center; height: 500px;">
           <!-- Flexbox container for the 3 images -->
           <div class="flex-container" style="display: flex; justify-content: space-between; align-items: center; height: 100%;">
-            <img src="images/art3.jpg" alt="Art3" style="width: 30%; height: 60%; object-fit: cover;">
-            <img src="images/art2.jpg" alt="Art2" style="width: 30%; height: 60%; object-fit: cover;">
-            <img src="images/art1.jpg" alt="Art1" style="width: 30%; height: 60%; object-fit: cover;">
+            <img src="images/art3.JPG" alt="Art3" style="width: 30%; height: 60%; object-fit: cover;">
+            <img src="images/art2.JPG" alt="Art2" style="width: 30%; height: 60%; object-fit: cover;">
+            <img src="images/art1.JPG" alt="Art1" style="width: 30%; height: 60%; object-fit: cover;">
           </div>
         </div>
 
