--- a/layouts/index.html
+++ b/layouts/index.html
@@ -23,20 +23,8 @@
               {{ .Render "summary-with-image" }}
             </div>
           {{ end }}
-
-        <!-- <div class="relative w-100 mb0" style="height: 60vh;">
-          <img src="images/forest.jpg" style="object-fit: cover; height: 100%; width: 100%; filter: grayscale(40%) opacity(60%)">
-        </div> -->
-        <!-- <div class="relative w-100 mb0" style="background-image: url('images/forest.jpg'); background-size: cover; background-position: center; height: 500px;">
-          Flexbox container for the 3 images
-          <div class="flex-container" style="display: flex; justify-content: space-between; align-items: center; height: 100%;">
-            <img src="images/art3.JPG" alt="Art3" style="width: 30%; height: 60%; object-fit: cover;">
-            <img src="images/art2.JPG" alt="Art2" style="width: 30%; height: 60%; object-fit: cover;">
-            <img src="images/art1.JPG" alt="Art1" style="width: 30%; height: 60%; object-fit: cover;">
-          </div>
-        </div> -->
         
-        <div class="relative w-100 mb0 ph4" style="position: relative; height: 700px;">
+        <div class="relative w-100 mb0" style="height: 70vh;">
           <!-- Background overlay div with filter -->
           <div style="
               position: absolute;
