--- a/layouts/partials/site-header.html
+++ b/layouts/partials/site-header.html
@@ -5,16 +5,18 @@
     {{ partial "site-navigation.html" .}}
   <header class="tc-l pv2 pv3-l ph3 ph4-ns" style="background: linear-gradient(to bottom, #f5ebe1 50%, #633331 50%);">
       {{ if $featured_image }}
-      <h1> 
-        {{ .Title }}
-      </h1>
+      <div class="pv3">
+        <h1> 
+          {{ .Title }}
+        </h1>
+      </div>
       <div style="width: 50%; max-width: 500px; height: auto; aspect-ratio: 1; margin: 0 auto; border-radius: 50%; overflow: hidden;">
         <img src="{{ $featured_image }}" alt="Featured Image" style="width: 100%; height: 100%; object-fit: cover;">
       </div>      
       {{ end }}
-      <div class="pv4 w-100 w-70-ns center">
+      <div class="pv3 w-100 w-70-ns center">
       {{ with .Params.description }}
-      <p class="white">{{.}}</p>
+      <p class="white" style="text-align: center;">{{.}}</p>
       {{ end }}
       </div>
     </div>
