--- a/static/css/main.css
+++ b/static/css/main.css
@@ -111,26 +111,19 @@
   h2 {
     /* font-family: TC Brookleigh; */
     font-family: Thasadith;
-    font-size: clamp(0.5rem, 4vw + 1rem, 3.0rem);
+    font-size: clamp(0.5rem, 4vw + 1rem, 2.5rem);
     font-weight: 400;
     letter-spacing: -0.02em;
     text-align: center;
   }
-  
-  /* p {
-    font-family: Thasadith;
-    font-size: clamp(0.1rem, 4vw + 1rem, 1.5rem);
-    font-weight: 400;
-    line-height: clamp(1.0rem, 4vw + 1rem, 2.0rem);
-    letter-spacing: 0.22em;
-  } */
 
   p {
     font-family: Thasadith;
-    font-size: clamp(1rem, 2vw + 1rem, 1.5rem);
+    font-size: clamp(1.0rem, 0.5vw + 1rem, 1.5rem);
     font-weight: 400;
-    line-height: clamp(1.2rem, 2vw + 1rem, 2.0rem);
+    line-height: clamp(1.2rem, 1.5vw + 1rem, 1.5rem);
     letter-spacing: clamp(0.05em, 0.1vw, 0.2em);
+    text-align: justify;
   }
   
   
