--- a/layouts/gallery/single.html
+++ b/layouts/gallery/single.html
@@ -3,12 +3,12 @@
   <head>
     <link rel="stylesheet" href="{{$.Site.BaseURL}}/css/main.css">
   </head>
-  <div class="flex-l mt2 mw8 center">
+  <div class="flex-l mt2 mw8 center" style="background-color: #f5ebe1;">
     <article class="center cf pv5 ph3 ph4-ns mw7">
       <header>
-        <h1 class="f1">
+        <!-- <h1 class="f1">
           {{ .Title }}
-        </h1>
+        </h1> -->
       </header>
       <div class="gallery-container">
         <div class="gallery-grid">
