--- a/layouts/_default/summary-with-image.html
+++ b/layouts/_default/summary-with-image.html
@@ -1,48 +1,30 @@
-<!-- {{ $featured_image := partial "func/GetFeaturedImage.html" . }}
+{{ $featured_image := partial "func/GetFeaturedImage.html" . }}
 
-<article class="">
-  <div class="db pv0 ph0 ph0-l no-underline dark-gray">
-    <div class="flex flex-column flex-row-l">
-          <div class="blah w-100 w-50-l">
-            <h2>
-              {{ .Title }}
-            </h2>
-            <div class="ph3 f6 f5-l lh-copy nested-copy-line-height nested-links">
-              {{ .Summary }}
-            </div>
+<article class="h-100">
+  <div class="db pv0 ph0 ph0-l no-underline dark-gray h-100">
+    <!-- Parent div ensures equal scaling -->
+    <div class="flex flex-column flex-row-l h-100" style="align-items: stretch;">
+      <!-- Text Block -->
+      <div class="blah w-100 w-50-l flex items-center" style="overflow: hidden;">
+        <div class="ph3">
+          <div>
+            <h2>{{ .Title }}</h2>
           </div>
-
-        {{ if $featured_image }}
-          <div class="w-100 w-50-l mb0 mb0-ns">
-            <img src="{{ $featured_image }}" alt="image from {{ .Title }}" style="width: 100%; height: 100%; object-fit: cover;">
+          <div class="lh-copy nested-copy-line-height nested-links">
+            <p>{{ .Summary }}</p>
           </div>
-        {{ end }}
-    </div>
-  </div>
-</article>
- -->
-
-
- {{ $featured_image := partial "func/GetFeaturedImage.html" . }}
-
-<article class="">
-  <div class="db pv0 ph0 ph0-l no-underline dark-gray">
-    <!-- Make sure the parent div has a height for centering -->
-    <div class="flex flex-column flex-row-l" style="height: 100%; justify-content: center; align-items: center;">
-      <div class="blah w-100 w-50-l">
-        <h2>
-          {{ .Title }}
-        </h2>
-        <div class="ph3 f6 f5-l lh-copy nested-copy-line-height nested-links">
-          {{ .Summary }}
+          <a href="{{$.Site.BaseURL}}pages/gallery/" class="font-Thasadith ba custom-border-color custom-bg-white br2 color-inherit dib f4 link mb4 ph3 pv2 custom-button-text">Projekte ansehen</a>
         </div>
       </div>
 
+      <!-- Image Block -->
       {{ if $featured_image }}
         <div class="w-100 w-50-l mb0 mb0-ns">
-          <img src="{{ $featured_image }}" alt="image from {{ .Title }}" style="width: 100%; height: 100%; object-fit: cover;">
+          <img src="{{ $featured_image }}" alt="image from {{ .Title }}"
+                style="width: 100%; height: 100%; object-fit: cover; display: block;">
         </div>
       {{ end }}
     </div>
   </div>
 </article>
+
