--- a/layouts/partials/site-header.html
+++ b/layouts/partials/site-header.html
@@ -14,9 +14,9 @@
         <img src="{{ $featured_image }}" alt="Featured Image" style="width: 100%; height: 100%; object-fit: cover;">
       </div>      
       {{ end }}
-      <div class="pv3 w-100 w-70-ns center">
+      <div class="pv3 w-100 w-90-ns w-60-l center">
       {{ with .Params.description }}
-      <p class="white" style="text-align: center;">{{.}}</p>
+      <p style="text-align: center; color:#E3DBDB">{{.}}</p>
       {{ end }}
       </div>
     </div>
