--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,129 +1,204 @@
+@font-face {
+  font-family: TCBrookleigh;
+  src: url("TCBrookleigh.otf") format("opentype");
+}
+
 /* Style the modal - hidden by default */
 .modal {
-    display: none; /* Hidden by default */
-    position: fixed;
-    z-index: 1000; /* Sit on top */
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.8); /* Black background with transparency */
-    cursor: pointer; /* Add a pointer cursor when hovering over the modal */
-  }
-  
-  /* Style for the enlarged image inside the modal */
-  .modal-content {
-    margin: auto;
-    display: block;
-    max-width: 80%;
-    max-height: 80%;
-    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.8); /* Shadow for a nicer look */
-    transition: all 0.3s ease;
-  }
-  
-  /* Caption text (image alt text) */
-  #caption {
-    margin: auto;
-    display: block;
-    width: 80%;
-    text-align: center;
-    color: #ccc;
-    padding: 10px 0;
-  }
-  
-  /* The close button */
-  .close {
-    position: absolute;
-    top: 20px;
-    right: 35px;
-    color: #fff;
-    font-size: 40px;
-    font-weight: bold;
-    transition: 0.3s;
-  }
-  
-  /* Hover effect for the close button */
-  .close:hover,
-  .close:focus {
-    color: #bbb;
-    text-decoration: none;
-    cursor: pointer;
-  }
+  display: none; /* Hidden by default */
+  position: fixed;
+  z-index: 1000; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8); /* Black background with transparency */
+  cursor: pointer; /* Add a pointer cursor when hovering over the modal */
+}
+
+/* Style for the enlarged image inside the modal */
+.modal-content {
+  margin: auto;
+  display: block;
+  /* max-width: 80%;
+  max-height: 80%; */
+  /* box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.8); Shadow for a nicer look */
+  transition: all 0.3s ease;
+}
+
+/* Caption text (image alt text) */
+#caption {
+  margin: auto;
+  display: block;
+  width: 80%;
+  text-align: center;
+  color: #ccc;
+  padding: 10px 0;
+}
+
+/* The close button */
+.close {
+  position: absolute;
+  top: 20px;
+  right: 35px;
+  color: #fff;
+  font-size: 40px;
+  font-weight: bold;
+  transition: 0.3s;
+}
+
+/* Hover effect for the close button */
+.close:hover,
+.close:focus {
+  color: #bbb;
+  text-decoration: none;
+  cursor: pointer;
+}
 
 /* Gallery container styles */
 .gallery-container {
-    display: flex;
-    justify-content: center;
-    padding: 20px;
-  }
-  
-  /* CSS grid for gallery layout */
-  .gallery-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); /* Auto-fit the columns with a minimum size of 200px */
-    gap: 15px; /* Space between grid items */
-    width: 100%;
-    max-width: 1200px; /* Limit the max width of the grid */
-  }
-  
-  /* Ensure all images have the same size and maintain aspect ratio */
-  .gallery-image {
-    width: 100%;
-    height: 200px; /* Fixed height for uniformity */
-    object-fit: cover; /* Ensure the image covers the entire area while maintaining aspect ratio */
-    border-radius: 10px; /* Optional: Rounded corners */
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1); /* Optional: Add a slight shadow for effect */
-    transition: transform 0.3s ease; /* Optional: Add hover effect */
-  }
+  display: flex;
+  justify-content: center;
+  padding: 20px;
+}
 
-  .quad-image {
-    width: 100%; /* Make the image responsive to the container width */
-    height: 500px;
-    width: 1000px;
-    object-fit: cover; /* Ensure the image covers the square area while maintaining aspect ratio */
-    /*padding-bottom: 100%; /* Ensures the height is the same as the width (1:1 aspect ratio) */
-    /*border-radius: 10px; /* Optional: Rounded corners */
-    /*box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1); /* Optional: Add a slight shadow for effect */
-    /*transition: transform 0.3s ease; /* Optional: Add hover effect */
-  }
-  /* Hover effect for images */
-  .gallery-image:hover {
-    transform: scale(1.05); /* Slight zoom on hover */
-  }
+/* CSS grid for gallery layout */
+.gallery-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); /* Auto-fit the columns with a minimum size of 200px */
+  gap: 15px; /* Space between grid items */
+  width: 100%;
+  max-width: 1200px; /* Limit the max width of the grid */
+}
 
-  .pb7 {
-    padding-bottom: 0;
-  }
+/* Ensure all images have the same size and maintain aspect ratio */
+.gallery-image {
+  width: 100%;
+  /* height: 200px; Fixed height for uniformity */
+  object-fit: cover; /* Ensure the image covers the entire area while maintaining aspect ratio */
+  border-radius: 10px; /* Optional: Rounded corners */
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1); /* Optional: Add a slight shadow for effect */
+  transition: transform 0.3s ease; /* Optional: Add hover effect */
+}
 
-  div {
-    line-height: 0.0; /* Adjust this value as needed */
-  }
+.quad-image {
+  width: 100%; /* Make the image responsive to the container width */
+  height: 500px;
+  width: 1000px;
+  object-fit: cover; /* Ensure the image covers the square area while maintaining aspect ratio */
+  /*padding-bottom: 100%; /* Ensures the height is the same as the width (1:1 aspect ratio) */
+  /*border-radius: 10px; /* Optional: Rounded corners */
+  /*box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1); /* Optional: Add a slight shadow for effect */
+  /*transition: transform 0.3s ease; /* Optional: Add hover effect */
+}
+/* Hover effect for images */
+.gallery-image:hover {
+  transform: scale(1.05); /* Slight zoom on hover */
+}
 
-  h1 {
-    /* font-family: TC Brookleigh; */
-    font-family: Thasadith;
-    font-weight: 400;
-    letter-spacing: -0.02em;
-    text-align: center;
-    font-size: clamp(1.5rem, 4vw + 1rem, 4.0rem);
-  }
-  
-  h2 {
-    /* font-family: TC Brookleigh; */
-    font-family: Thasadith;
-    font-size: clamp(0.5rem, 4vw + 1rem, 2.5rem);
-    font-weight: 400;
-    letter-spacing: -0.02em;
-    text-align: center;
-  }
+.pb7 {
+  padding-bottom: 0;
+}
 
-  p {
-    font-family: Thasadith;
-    font-size: clamp(1.0rem, 0.5vw + 1rem, 1.5rem);
-    font-weight: 400;
-    line-height: clamp(1.2rem, 1.5vw + 1rem, 1.5rem);
-    letter-spacing: clamp(0.05em, 0.1vw, 0.2em);
-    text-align: justify;
+div {
+  line-height: 0.0; /* Adjust this value as needed */
+}
+
+h1 {
+  font-family: TCBrookleigh;
+  font-weight: 400;
+  letter-spacing: -0.02em;
+  text-align: center;
+  font-size: clamp(1.5rem, 4vw + 1rem, 4.0rem);
+}
+
+h2 {
+  font-family: TCBrookleigh;
+  font-size: clamp(0.5rem, 4vw + 1rem, 2.5rem);
+  font-weight: lighter;
+  letter-spacing: -0.02em;
+  /* text-align: center; */
+}
+
+p {
+  font-family: Thasadith;
+  font-size: clamp(1.0rem, 0.5vw + 1rem, 1.5rem);
+  font-weight: lighter;
+  line-height: clamp(1.2rem, 1.5vw + 1rem, 1.5rem);
+  letter-spacing: clamp(0.05em, 0.1vw, 0.2em);
+  /* font-family: Thasadith;
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 40px;
+  letter-spacing: 0.22em;
+  text-align: justified;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none; */
+}
+
+.font-Thasadith {
+  font-family: 'Thasadith', sans-serif;
+}
+
+.font-TCBrookleigh {
+  font-family: 'TCBrookleigh', sans-serif;
+}
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  /* gap: 1px; */
+  /* padding: 0 4px; */
+}
+
+/* Create four equal columns that sits next to each other */
+.column {
+  flex: 25%;
+  max-width: 25%;
+  /* padding: 0 4px; */
+}
+
+.column img {
+  /* margin-top: 8px; */
+  vertical-align: middle;
+  width: 100%;
+}
+
+/* Responsive layout - makes a two column-layout instead of four columns */
+@media screen and (max-width: 800px) {
+  .column {
+    flex: 50%;
+    max-width: 50%;
   }
-  
-  
+}
+
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .column {
+    flex: 100%;
+    max-width: 100%;
+  }
+}
+
+.custom-bg-white {
+  background-color:#f5ebe1;
+}
+
+.custom-bg-red {
+  background-color:#633331;
+}
+
+.custom-border-color {
+  border-color:#633331;
+}
+
+.custom-button-text {
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  font-family: Thasadith;
+  font-size: clamp(1.0rem, 0.5vw + 1rem, 1.5rem);
+  font-weight: lighter;
+  line-height: clamp(1.2rem, 1.5vw + 1rem, 1.5rem);
+  letter-spacing: clamp(0.05em, 0.1vw, 0.2em);
+}
+
