--- a/layouts/contact_page/single.html
+++ b/layouts/contact_page/single.html
@@ -2,7 +2,7 @@
 {{ define "header" }}{{ partial "page-header.html" . }}{{ end }}
 {{ define "main" }}
   <head>
-    <link rel="stylesheet" href="{{$.Site.BaseURL}}css/main.css">
+    <link rel="stylesheet" href="{{$.Site.BaseURL}}/css/main.css">
   </head>
   
   <!-- Title and Description Section -->
