--- a/layouts/partials/site-header.html
+++ b/layouts/partials/site-header.html
@@ -16,7 +16,7 @@
       {{ end }}
       <div class="pv3 w-100 w-90-ns w-60-l center">
       {{ with .Params.description }}
-      <p style="text-align: center; color:#E3DBDB">{{.}}</p>
+      <p style="text-align: center; color:#f5ebe1">{{.}}</p>
       {{ end }}
       </div>
     </div>
