--- a/layouts/partials/page-header.html
+++ b/layouts/partials/page-header.html
@@ -8,7 +8,7 @@
         {{ if not .Params.omit_header_text }}
           <div class="f2 f1-l white-90 mb0 lh-title">{{ .Title | default .Site.Title }}</div>
           {{ with .Params.description  }}
-            <div class="f5 f3-l measure-l center lh-copy mt3 mb4" style="color:#E3DBDB">
+            <div class="f5 f3-l measure-l center lh-copy mt3 mb4" style="color:#f5ebe1">
               {{ . }}
             </div>
           {{ end }}
