--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,15 +3,20 @@
   src: url("TCBrookleigh.otf") format("opentype");
 }
 
+@font-face {
+  font-family: Thasadith;
+  src: url("Thasadith-Regular.ttf") format("opentype");
+}
+
 /* Style the modal - hidden by default */
 .modal {
   display: none; /* Hidden by default */
   position: fixed;
-  z-index: 1000; /* Sit on top */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px;
+  padding-bottom: 100px;
   left: 0;
   top: 0;
-  width: 100%;
-  height: 100%;
   background-color: rgba(0, 0, 0, 0.8); /* Black background with transparency */
   cursor: pointer; /* Add a pointer cursor when hovering over the modal */
 }
@@ -24,6 +29,7 @@
   max-height: 80%; */
   /* box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.8); Shadow for a nicer look */
   transition: all 0.3s ease;
+  cursor: pointer;
 }
 
 /* Caption text (image alt text) */
@@ -110,6 +116,7 @@ h1 {
   letter-spacing: -0.02em;
   text-align: center;
   font-size: clamp(1.5rem, 4vw + 1rem, 4.0rem);
+  color: #633331;
 }
 
 h2 {
@@ -117,6 +124,7 @@ h2 {
   font-size: clamp(0.5rem, 4vw + 1rem, 2.5rem);
   font-weight: lighter;
   letter-spacing: -0.02em;
+  color: #633331;
   /* text-align: center; */
 }
 
@@ -126,6 +134,7 @@ p {
   font-weight: lighter;
   line-height: clamp(1.2rem, 1.5vw + 1rem, 1.5rem);
   letter-spacing: clamp(0.05em, 0.1vw, 0.2em);
+  color: #633331;
   /* font-family: Thasadith;
   font-size: 24px;
   font-weight: 400;
@@ -184,9 +193,47 @@ p {
   background-color:#f5ebe1;
 }
 
+.custom-font-white {
+  color: #f5ebe1;
+}
+
+.custom-font-red {
+  color: #633331;
+}
+
+.custom-font-red-90 {
+  color: #633331;
+  opacity: 0.9;
+}
+
+.custom-font-red-90:hover {
+  color: #633331;
+  opacity: 1.0;
+  cursor: pointer;
+}
+
+.custom-font-white-90 {
+  color: #f5ebe1;
+  opacity: 0.9;
+}
+
+.custom-font-white-90:hover {
+  color: #f5ebe1;
+  opacity: 1.0;
+  cursor: pointer;
+}
+
 .custom-bg-red {
   background-color:#633331;
 }
+
+.custom-bg-light-red {
+  background-color: #AA5B5B;
+}
+
+/* .custom-bg-light-red:hover {
+  background-color:#633331;
+} */
 
 .custom-border-color {
   border-color:#633331;
@@ -200,5 +247,6 @@ p {
   font-weight: lighter;
   line-height: clamp(1.2rem, 1.5vw + 1rem, 1.5rem);
   letter-spacing: clamp(0.05em, 0.1vw, 0.2em);
+  color: #633331;
 }
 
