--- a/layouts/contact_page/single.html
+++ b/layouts/contact_page/single.html
@@ -6,11 +6,13 @@
   </head>
   
   <!-- Title and Description Section -->
-  <div class="tc pv4 w-100 ph3 center" style="background-color: #f5ebe1;">
-    <h1 class="lh-title">{{ .Params.subtitle }}</h1>
+  <!-- <div class="custom-bg-white tc pv4 w-100 ph3 center" style="text-align: center;">
+    <h1 class="f1">{{ .Params.subtitle }}</h1> -->
+  <div class="custom-bg-white tc pv4 w-100 ph3 center" style="background-color: #f5ebe1;">
+    <h1 class="f1">{{ .Params.subtitle }}</h1>
     <p class="f4 lh-copy mw7 center">{{ .Params.description | default "Your custom subtitle or description here." }}</p>
   </div>
-
+  
   <!-- Main Content Section -->
   <div class="flex-l center" style="background-color: #f5ebe1;">
     <div class="center cf pv3 ph3 ph4-ns mw8 flex">
