--- a/layouts/_default/summary-with-image.html
+++ b/layouts/_default/summary-with-image.html
@@ -6,14 +6,14 @@
     <div class="flex flex-column flex-row-l h-100" style="align-items: stretch;">
       <!-- Text Block -->
       <div class="blah w-100 w-50-l flex items-center" style="overflow: hidden;">
-        <div class="ph3">
+        <div class="ph3 pv2">
           <div>
             <h2>{{ .Title }}</h2>
           </div>
           <div class="lh-copy nested-copy-line-height nested-links">
             <p>{{ .Summary }}</p>
           </div>
-          <a href="{{$.Site.BaseURL}}pages/gallery/" class="font-Thasadith ba custom-border-color custom-bg-white br2 dib f4 link mb4 ph3 pv2 custom-button-text">Projekte ansehen</a>
+          <a href="{{$.Site.BaseURL}}pages/gallery/" class="font-Thasadith ba custom-border-color custom-bg-white br2 dib f4 link mb3 ph3 pv2 custom-button-text">Projekte ansehen</a>
         </div>
       </div>
 
