--- a/layouts/index.html
+++ b/layouts/index.html
@@ -33,10 +33,10 @@
               left: 0;
               width: 100%;
               height: 100%;
-              background-image: url('images/forest.jpg');
+              background-image: url('images/forest.png');
               background-size: cover;
               background-position: center;
-              filter: grayscale(30%) opacity(70%);
+              /* filter: grayscale(30%) opacity(70%); */
               z-index: 1;
           "></div>
         
