--- a/layouts/partials/site-header.html
+++ b/layouts/partials/site-header.html
@@ -3,14 +3,14 @@
   {{/* Trimming the slash and adding absURL make sure the image works no matter where our site lives */}}
   <div class="{{ .Site.Params.cover_dimming_class | default "#e1dbdb 50%" }}">
     {{ partial "site-navigation.html" .}}
-  <header class="tc-l pv2 pv3-l ph3 ph4-ns" style="background: linear-gradient(to bottom, #f5ebe1 50%, #633331 50%);">
+  <header class="tc-l pv2 pv3-l ph3 ph4-ns" style="max-height: 600px; background: linear-gradient(to bottom, #f5ebe1 50%, #633331 50%);">
       {{ if $featured_image }}
       <div class="pv3">
-        <h1> 
+        <h1 class="f1"> 
           {{ .Title }}
         </h1>
       </div>
-      <div style="width: 50%; max-width: 500px; height: auto; aspect-ratio: 1; margin: 0 auto; border-radius: 50%; overflow: hidden;">
+      <div class="featured-image-container">
         <img src="{{ $featured_image }}" alt="Featured Image" style="width: 100%; height: 100%; object-fit: cover;">
       </div>      
       {{ end }}
