--- a/layouts/shortcodes/form-contact.html
+++ b/layouts/shortcodes/form-contact.html
@@ -3,18 +3,18 @@
 
 <form class="custom-font-white font-Thasadith" accept-charset="UTF-8" action="{{ .Get "action" }}" method="POST" role="form">
 
-    <label class="custom-font-white font-Thasadith {{ $.Scratch.Get "labelClasses" }}"  for="name">{{ i18n "yourName" }}</label>
+    <label class="custom-font-white font-Thasadith {{ $.Scratch.Get "labelClasses" }}"  for="name">Name</label>
     <input type="text" id="name" name="name" class="{{ $.Scratch.Get "inputClasses" }}"  required placeholder=" "  aria-labelledby="name"/>
 
-    <label class="custom-font-white font-Thasadith {{ $.Scratch.Get "labelClasses" }}" for="email">{{ i18n "emailAddress" }}</label>
+    <label class="custom-font-white font-Thasadith {{ $.Scratch.Get "labelClasses" }}" for="email">E-Mail Adresse</label>
     <input type="email" id="email" name="email" class="{{ $.Scratch.Get "inputClasses" }}"  required placeholder=" "  aria-labelledby="email"/>
     <!-- <div class="requirements f6 white glow i ph3 overflow-hidden">
       {{ i18n "emailRequiredNote" }}
     </div> -->
 
-    <label class="custom-font-white font-Thasadith {{ $.Scratch.Get "labelClasses" }}" for="message">{{ i18n "message" }}</label>
+    <label class="custom-font-white font-Thasadith {{ $.Scratch.Get "labelClasses" }}" for="message">Nachricht</label>
     <textarea id="message" name="message" class="{{ $.Scratch.Get "inputClasses" }} h4" aria-labelledby="message"></textarea>
 
-    <input class="db w-100 mv2 custom-font-white-90 pa3 bn hover-shadow bg-animate custom-bg-light-red" type="submit" value="{{ i18n "send" }}" />
+    <input class="db w-100 mv2 custom-font-white-90 pa3 bn hover-shadow bg-animate custom-bg-light-red" type="submit" value="Senden" />
 
 </form>
