small changes, privacy declaration

--- a/layouts/contact_page/single.html
+++ b/layouts/contact_page/single.html
@@ -10,7 +10,7 @@
     <h1 class="f1">{{ .Params.subtitle }}</h1> -->
   <div class="custom-bg-white tc pv4 w-100 ph3 center" style="background-color: #f5ebe1;">
     <h1 class="f1">{{ .Params.subtitle }}</h1>
-    <p class="f4 lh-copy mw7 center">{{ .Params.description | default "Your custom subtitle or description here." }}</p>
+    <p class="f4 lh-copy mw7 center" style="text-align: center;">{{ .Params.description | default "Your custom subtitle or description here." }}</p>
   </div>
   
   <!-- Main Content Section -->
