--- a/layouts/shortcodes/form-contact.html
+++ b/layouts/shortcodes/form-contact.html
@@ -2,7 +2,7 @@
 {{ $.Scratch.Add "inputClasses" "w-100 f5 pv3 ph3 bg-light-gray bn" }}
 
 <form class="custom-font-white font-Thasadith" accept-charset="UTF-8" action="{{ .Get "action" }}" method="POST" role="form">
-
+    <input type="hidden" name="_redirect" value="https://sesselwerkstatt.com/"/>
     <label class="custom-font-white font-Thasadith {{ $.Scratch.Get "labelClasses" }}"  for="name">Name</label>
     <input type="text" id="name" name="name" class="{{ $.Scratch.Get "inputClasses" }}"  required placeholder=" "  aria-labelledby="name"/>
 
@@ -13,7 +13,7 @@
     </div> -->
 
     <label class="custom-font-white font-Thasadith {{ $.Scratch.Get "labelClasses" }}" for="message">Nachricht</label>
-    <textarea id="message" name="message" class="{{ $.Scratch.Get "inputClasses" }} h4" aria-labelledby="message"></textarea>
+    <textarea id="message" name="message" class="{{ $.Scratch.Get "inputClasses" }} h5" aria-labelledby="message"></textarea>
 
     <input class="db w-100 mv2 custom-font-white-90 pa3 bn hover-shadow bg-animate custom-bg-light-red" type="submit" value="Senden" />
 
