--- a/public/css/main.css
+++ b/public/css/main.css
@@ -130,11 +130,15 @@ h2 {
 
 p {
   font-family: Thasadith;
-  font-size: clamp(1.0rem, 0.5vw + 1rem, 1.5rem);
-  font-weight: lighter;
-  line-height: clamp(1.2rem, 1.5vw + 1rem, 1.5rem);
-  letter-spacing: clamp(0.05em, 0.1vw, 0.2em);
+  font-size: clamp(1.0rem, 0.5vw + 1rem, 1.3rem);
+  /* font-size: 20px; */
+  /* font-weight: lighter; */
+  line-height: clamp(1.2rem, 1.5vw + 1rem, 2.0rem);
+  /* line-height: 30px; */
+  letter-spacing: clamp(0.05em, 0.1vw, 0.5em);
+  /* letter-spacing: 0.22em; */
   color: #633331;
+  text-align: justify;
   /* font-family: Thasadith;
   font-size: 24px;
   font-weight: 400;
@@ -257,4 +261,7 @@ p {
   overflow: hidden;
 }
 
+.f1 {
+  font-size: 3.5rem;
+}
 /* width: 50%; max-width: 500px; height: auto; margin: 0 auto; border-radius: 50%; overflow: hidden; */
