--- a/layouts/shortcodes/form-contact.html
+++ b/layouts/shortcodes/form-contact.html
@@ -15,6 +15,13 @@
     <label class="custom-font-white font-Thasadith {{ $.Scratch.Get "labelClasses" }}" for="message">Nachricht</label>
     <textarea id="message" name="message" class="{{ $.Scratch.Get "inputClasses" }} h5" aria-labelledby="message"></textarea>
 
+    <div class="mt0" style="display: flex; align-items: center;">
+      <input type="checkbox" id="privacy" name="privacy" required style="margin-right: 10px; margin-top: 10px;">
+      <label for="privacy" class="custom-font-white font-Thasadith {{ $.Scratch.Get "labelClasses" }}">
+          Ich stimme der <a href="/Sesselwerkstatt/pages/privacy/" target="_blank" class="underline">Datenschutzerklärung</a> zu.
+      </label>
+    </div>
+
     <input class="db w-100 mv2 custom-font-white-90 pa3 bn hover-shadow bg-animate custom-bg-light-red" type="submit" value="Senden" />
 
 </form>
