--- a/static/css/main.css
+++ b/static/css/main.css
@@ -128,25 +128,19 @@ h2 {
   /* text-align: center; */
 }
 
+h3, h4 {
+  font-family: Thasadith;
+  color: #633331;
+}
+
+
 p {
   font-family: Thasadith;
-  font-size: clamp(1.0rem, 0.5vw + 1rem, 1.3rem);
-  /* font-size: 20px; */
-  /* font-weight: lighter; */
+  font-size: clamp(1.0rem, 0.5vw + 1rem, 1.1rem);
   line-height: clamp(1.2rem, 1.5vw + 1rem, 2.0rem);
-  /* line-height: 30px; */
   letter-spacing: clamp(0.05em, 0.1vw, 0.5em);
-  /* letter-spacing: 0.22em; */
   color: #633331;
   text-align: justify;
-  /* font-family: Thasadith;
-  font-size: 24px;
-  font-weight: 400;
-  line-height: 40px;
-  letter-spacing: 0.22em;
-  text-align: justified;
-  text-underline-position: from-font;
-  text-decoration-skip-ink: none; */
 }
 
 .font-Thasadith {
