--- a/layouts/gallery/single.html
+++ b/layouts/gallery/single.html
@@ -35,7 +35,7 @@
       </div>
       <div id="imageModal" class="modal" onclick="closeModal()">
         <span class="close">&times;</span>
-        <img class="modal-content" id="enlargedImage">
+        <img class="modal-content" id="enlargedImage" loading="lazy">
         <!-- <div id="caption"></div> -->
       </div>
       <footer style="text-align: center;">
