--- a/layouts/shortcodes/form-contact.html
+++ b/layouts/shortcodes/form-contact.html
@@ -17,7 +17,7 @@
 
     <div class="mt0" style="display: flex; align-items: center;">
       <input type="checkbox" id="privacy" name="privacy" required style="margin-right: 10px; margin-top: 10px;">
-      <label for="privacy" class="custom-font-white font-Thasadith {{ $.Scratch.Get "labelClasses" }}">
+      <label for="privacy" class="custom-font-white font-Thasadith {{ $.Scratch.Get "labelClasses" }}" style="line-height: 1.0">
           Ich stimme der <a href="/Sesselwerkstatt/pages/privacy/" target="_blank" class="underline">Datenschutzerklärung</a> zu.
       </label>
     </div>
