--- a/layouts/gallery/single.html
+++ b/layouts/gallery/single.html
@@ -6,7 +6,7 @@
 
   <!-- Title and Description Section -->
   <div class="custom-bg-white tc pv4 w-100 ph3 center" style="text-align: center;">
-    <h1 class="f1">{{ .Params.subtitle }}</h1>
+    <h1>{{ .Params.subtitle }}</h1>
     <p class="f4 lh-copy mw7 center" style="text-align: center;">{{ .Params.description | default "Your custom subtitle or description here." }}</p>
   </div>
 
