fix modal image

--- a/layouts/gallery/single.html
+++ b/layouts/gallery/single.html
@@ -25,7 +25,7 @@
           {{ range $imgIndex, $image := $images }}
           {{ if eq (mod $imgIndex $columns) $colIndex }}
           <div class="pa2">
-            <img src="{{ $image.RelPermalink }}" alt="{{ $image.Name }}" class="modal-content img-responsive"> <!-- onclick="openModal(this)"> -->
+            <img src="{{ $image.RelPermalink }}" alt="{{ $image.Name }}" class="modal-content img-responsive" onclick="openModal(this)">
           </div>
           {{ end }}
           {{ end }}
@@ -38,10 +38,10 @@
         <img class="modal-content" id="enlargedImage" loading="lazy">
         <!-- <div id="caption"></div> -->
       </div>
-      <footer style="text-align: center;">
+      <div style="text-align: center;">
         <p class="f4 lh-copy mw7 center" style="text-align: center;">{{ .Params.subdescription }}</p>
         <a href="{{$.Site.BaseURL}}pages/contact/" class="font-Thasadith ba custom-border-color custom-bg-white br2 color-inherit dib f4 link mb4 ph3 pv2 custom-button-text">Anfrage senden</a>
-      </footer>
+      </div>
     </article>
   </div>
   
@@ -49,18 +49,22 @@
     function openModal(image) {
       var modal = document.getElementById("imageModal");
       var modalImg = document.getElementById("enlargedImage");
-      var captionText = document.getElementById("caption");
       
-      modal.style.display = "block"; // Show the modal
-      modalImg.src = image.src; // Set the image source
-      //captionText.innerHTML = image.alt; // Set the image caption
+      modal.style.display = "flex"; // Change to flex to enable centering
+      modalImg.src = image.src;
     }
 
     function closeModal() {
       var modal = document.getElementById("imageModal");
-      modal.style.display = "none"; // Hide the modal
+      modal.style.display = "none";
     }
+
+    // Close modal when pressing escape key
+    document.addEventListener('keydown', function(event) {
+      if (event.key === "Escape") {
+        closeModal();
+      }
+    });
   </script>
 {{ end }}
- 
 
