--- a/layouts/contact_page/single.html
+++ b/layouts/contact_page/single.html
@@ -14,7 +14,7 @@
   </div>
   
   <!-- Main Content Section -->
-  <div class="flex-l center" style="background-color: #f5ebe1;">
+  <!-- <div class="flex-l center" style="background-color: #f5ebe1;">
     <div class="center cf pv3 ph3 ph4-ns mw8 content-flex">
       <div class="w-50-l pl3 ph0">
         <img src="{{$.Site.BaseURL}}images/papa_contact.jpg" alt="Kontaktbild" style="object-fit: cover;" loading="lazy">
@@ -24,24 +24,39 @@
         {{ .Content }}
       </div>
     </div>
+  </div> -->
+  <div class="flex-l center" style="background-color: #f5ebe1;">
+    <div class="center cf pv3 ph3 ph4-ns mw8 content-flex">
+      <div class="w-50-l pl3 ph0 content-div">
+        <img src="{{$.Site.BaseURL}}images/papa_contact.jpg" alt="Kontaktbild" style="object-fit: cover; height: 100%;" loading="lazy">
+      </div>
+      <div class="nested-copy-line-height lh-copy f4 nested-links ph3 {{ $.Param "text_color" | default "mid-gray" }} w-50-l w-100-m content-div" style="background-color: #633331">
+        {{ .Content }}
+      </div>
+    </div>
   </div>
   <style>
     /* Base Flex Layout */
     /* Content Specific Flex Layout */
-    .content-flex {
-      display: flex;
-      flex-wrap: wrap;
-    }
+  .content-flex {
+    display: flex;
+    min-height: 500px; /* Adjust as needed */
+  }
 
-    /* Responsive Breakpoint for Smaller Screens */
-    @media screen and (max-width: 768px) {
-      .content-flex {
-        flex-direction: column;
-      }
-      .w-50-l {
-        width: 100%;
-      }
+  .content-div {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+  }
+
+  @media screen and (max-width: 768px) {
+    .content-flex {
+      flex-direction: column;
     }
+    .content-div {
+      width: 100%;
+    }
+  }
   </style>
 {{ end }}
 
