--- a/layouts/gallery/single.html
+++ b/layouts/gallery/single.html
@@ -33,10 +33,15 @@
         {{ end }}
         </div>
       </div>
-      <div id="imageModal" class="modal" onclick="closeModal()">
+      <!-- <div id="imageModal" class="modal" onclick="closeModal()">
         <span class="close">&times;</span>
         <img class="modal-content" id="enlargedImage" loading="lazy">
-        <!-- <div id="caption"></div> -->
+      </div> -->
+      <div id="imageModal" class="modal" onclick="closeModal()">
+        <span class="close">&times;</span>
+        <button class="nav-btn prev" onclick="event.stopPropagation(); navigateImage(-1)">&#10094;</button>
+        <img class="modal-content" id="enlargedImage" loading="lazy">
+        <button class="nav-btn next" onclick="event.stopPropagation(); navigateImage(1)">&#10095;</button>
       </div>
       <div style="text-align: center;">
         <p class="f4 lh-copy mw7 center" style="text-align: center;">{{ .Params.subdescription }}</p>
@@ -46,25 +51,51 @@
   </div>
   
   <script>
+    let touchStartX = 0;
+    let touchEndX = 0;
+    
+    document.getElementById('imageModal').addEventListener('touchstart', e => {
+      touchStartX = e.changedTouches[0].screenX;
+    });
+
+    document.getElementById('imageModal').addEventListener('touchend', e => {
+      touchEndX = e.changedTouches[0].screenX;
+      handleSwipe();
+    });
+
+    function handleSwipe() {
+      const swipeThreshold = 50;
+      const diff = touchEndX - touchStartX;
+      
+      if (Math.abs(diff) > swipeThreshold) {
+        if (diff > 0) {
+          // Swipe right - previous image
+          navigateImage(-1);
+        } else {
+          // Swipe left - next image
+          navigateImage(1);
+        }
+      }
+    }
+    let currentImageIndex = 0;
+    const images = Array.from(document.querySelectorAll('.img-responsive')).map(img => img.src);
+
     function openModal(image) {
       var modal = document.getElementById("imageModal");
       var modalImg = document.getElementById("enlargedImage");
-      
-      modal.style.display = "flex"; // Change to flex to enable centering
+      modal.style.display = "flex";
       modalImg.src = image.src;
+      currentImageIndex = images.indexOf(image.src);
+    }
+
+    function navigateImage(direction) {
+      currentImageIndex = (currentImageIndex + direction + images.length) % images.length;
+      document.getElementById("enlargedImage").src = images[currentImageIndex];
     }
 
     function closeModal() {
-      var modal = document.getElementById("imageModal");
-      modal.style.display = "none";
+      document.getElementById("imageModal").style.display = "none";
     }
-
-    // Close modal when pressing escape key
-    document.addEventListener('keydown', function(event) {
-      if (event.key === "Escape") {
-        closeModal();
-      }
-    });
   </script>
 {{ end }}
 
